force-app/main/default/objects/Abatement_Strategies_History__c/Abatement_Strategies_History__c.object-meta.xml
<CustomObject>
    <label>Abatement Strategies History</label>
    <nameField>
        <displayFormat>ASH-{0}</displayFormat>
        <label>Abatement Strategies History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abatement Strategies Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>