force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewApprovedAbatementStrategies__c.field-meta.xml
<CustomField>
    <fullName>NewApprovedAbatementStrategies__c</fullName>
    <label>New Approved Abatement Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>