force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewApprovedUses__c.field-meta.xml
<CustomField>
    <fullName>NewApprovedUses__c</fullName>
    <label>New Approved Uses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>