force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewCoreAbatementStrategies__c.field-meta.xml
<CustomField>
    <fullName>NewCoreAbatementStrategies__c</fullName>
    <label>New Core Abatement Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>