force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewCoreStrategies__c.field-meta.xml
<CustomField>
    <fullName>NewCoreStrategies__c</fullName>
    <label>New Core Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>