force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewDescribeCurrentBudgetFundingSo__c.field-meta.xml
<CustomField>
    <fullName>NewDescribeCurrentBudgetFundingSo__c</fullName>
    <label>New Describe Current Budget &amp; Funding So</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>