force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewGeographicAreaPopulationPoverty__c.field-meta.xml
<CustomField>
    <fullName>NewGeographicAreaPopulationPoverty__c</fullName>
    <label>New Geographic Area, Population, Poverty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>