force-app/main/default/objects/Abatement_Strategies_History__c/fields/NewOutlineExistingEffortsNewExpan__c.field-meta.xml
<CustomField>
    <fullName>NewOutlineExistingEffortsNewExpan__c</fullName>
    <label>New Outline Existing Efforts &amp; New Expan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>