force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldApprovedAbatementStrategies__c.field-meta.xml
<CustomField>
    <fullName>OldApprovedAbatementStrategies__c</fullName>
    <label>Old Approved Abatement Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>