force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldApprovedUses__c.field-meta.xml
<CustomField>
    <fullName>OldApprovedUses__c</fullName>
    <label>Old Approved Uses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>