force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldCoreAbatementStrategies__c.field-meta.xml
<CustomField>
    <fullName>OldCoreAbatementStrategies__c</fullName>
    <label>Old Core Abatement Strategies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>