force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldCoreStrategies__c.field-meta.xml
<CustomField>
    <fullName>OldCoreStrategies__c</fullName>
    <label>Old Core Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>