force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldDescribeCurrentBudgetFundingSo__c.field-meta.xml
<CustomField>
    <fullName>OldDescribeCurrentBudgetFundingSo__c</fullName>
    <label>Old Describe Current Budget &amp; Funding So</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>