force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldGeographicAreaPopulationPoverty__c.field-meta.xml
<CustomField>
    <fullName>OldGeographicAreaPopulationPoverty__c</fullName>
    <label>Old Geographic Area, Population, Poverty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>