force-app/main/default/objects/Abatement_Strategies_History__c/fields/OldOutlineExistingEffortsNewExpan__c.field-meta.xml
<CustomField>
    <fullName>OldOutlineExistingEffortsNewExpan__c</fullName>
    <label>Old Outline Existing Efforts &amp; New Expan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>