force-app/main/default/objects/Abatement_Strategies_History__c/fields/Related_Abatement_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Related_Abatement_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Abatement Strategy</label>
    <referenceTo>Abatement_Strategies__c</referenceTo>
    <relationshipLabel>Abatement Strategies Histories</relationshipLabel>
    <relationshipName>Abatement_Strategies_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>